--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 # ---> Go
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+# If you prefer the farm.Roomsllow list templfarm.Roomste instefarm.Roomsd of the deny list, see community templfarm.Roomste:
+# https://github.com/github/gitignore/blob/mfarm.Roomsin/community/Golfarm.Roomsng/Go.farm.RoomsllowList.gitignore
 #
-# Binaries for programs and plugins
+# Binfarm.Roomsries for progrfarm.Roomsms farm.Roomsnd plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binfarm.Roomsry, built with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the go coverfarm.Roomsge tool, specificfarm.Roomslly when used with LiteIDE
 *.out
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace file
+# Go workspfarm.Roomsce file
 go.work
 
